= Corefines Changelog
:repo-uri: https://github.com/jirutka/corefines
:doc-base-url: http://www.rubydoc.info/github/jirutka/corefines/Corefines
:issue-uri: {repo-uri}/issues


== Unreleased

* Add new refinement {doc-base-url}/Hash/Recurse[Hash#recurse].


== 1.10.0 (2017-07-26)

* Replace deprecated `Fixnum` with `Integer`.


== 1.9.0 (2016-02-03)

* Add new refinement {doc-base-url}/Enumerable/MapBy[Enumerable#map_by].


== 1.8.0 (2015-07-06)

* Add new refinement {doc-base-url}/Class/Descendants[Class#descendants].


== 1.7.0 (2015-07-05)

* Add new refinement {doc-base-url}/Enumerable/MapTo[Enumerable#map_to].
* Add new refinement {doc-base-url}/Array/Wrap[Array#wrap].
* Add new refinement {doc-base-url}/Enumerable/Many[Enumerable#many?].


== 1.6.0 (2015-05-16)

* Add new refinement {doc-base-url}/String/Camelcase[String#camelcase].
* Add new refinement {doc-base-url}/String/SnakeCase[String#snake_case].


== 1.5.0 (2015-05-03)

* Rename String refinement `#to_regexp` to `#to_re` to avoid bug https://bugs.ruby-lang.org/issues/11117[#11117] in MRI.


== 1.4.0 (2015-05-03)

* Add new refinement {doc-base-url}/String/ForceUTF8[String#force_utf8].


== 1.3.0 (2015-04-29)

* Add new refinement {doc-base-url}/String/ToRegexp[String#to_regexp].
* Add new refinement {doc-base-url}/String/RelativePathFrom[String#relative_path_from].
* Add new refinement {doc-base-url}/Hash/Except[Hash#except].
* Add new refinement {doc-base-url}/Hash/Only[Hash#only].


== 1.2.0 (2015-04-27)

* Add new refinement {doc-base-url}/String/Indent[String#indent].


== 1.1.0 (2015-04-25)

* Add new refinement {doc-base-url}/String/ToB[String#to_b].
* Change alias for operator `+` from `OpPlus` to `OpAdd` and for operator `-` from `OpMinus` to `OpSub`.
* Support operators `+@` (alias `OpPlus`) and `-@` (alias `OpMinus`).


== 1.0.0 (2015-04-02)

The first stable release.